Fix alignment of close button in backend flash messages

--- a/core/app/assets/stylesheets/refinery/layout.css.scss
+++ b/core/app/assets/stylesheets/refinery/layout.css.scss
@@ -203,9 +203,6 @@ hr {
 .flash.flash_alert a, .flash.flash_alert a:hover {
   display: none;
 }
-.flash.flash_message a#flash_close {
-  top: 21px;
-}
 
 noscript .flash.flash_error a, noscript .flash.flash_error a:hover,
 noscript .flash.flash_alert a, noscript .flash.flash_alert a:hover {
